[gd_scene load_steps=14 format=2]

[ext_resource path="res://src/background/background_loader/BackGroundLoader.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/game/camera/Camera.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/main_menu/random_mover/RandomMover.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/UI/title.png" type="Texture" id=4]
[ext_resource path="res://src/ui/ButtonEffect.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/UI/menu_play.png" type="Texture" id=6]
[ext_resource path="res://src/main_menu/main_menu.gd" type="Script" id=7]
[ext_resource path="res://assets/UI/menu_options.png" type="Texture" id=8]
[ext_resource path="res://assets/UI/menu_shop.png" type="Texture" id=9]
[ext_resource path="res://src/main_menu/sub_menus/shop_menu/ShopMenu.tscn" type="PackedScene" id=10]
[ext_resource path="res://src/main_menu/sub_menus/score_menu/ScoreMenu.tscn" type="PackedScene" id=11]
[ext_resource path="res://src/main_menu/sub_menus/options_menu/OptionsMenu.tscn" type="PackedScene" id=12]

[sub_resource type="Animation" id=1]
resource_name = "menu_appear"
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Menu/ShopPosition/Mover/ShopButton:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.5, 0.7 ),
"transitions": PoolRealArray( 1, 0.5, -2, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 1.2, 1.2 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Menu/TitlePosition/Mover/TextureRect:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, -2, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 1.2, 1.2 ), Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Menu/PlayPosition/Mover/PlayButton:rect_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, -2, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 1.2, 1.2 ), Vector2( 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Menu/OptionsPosition/Mover/OptionsButton:rect_scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1, -2, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 1.2, 1.2 ), Vector2( 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Menu/ScorePosition/Mover/ScoreButton:rect_scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, -2, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 1.2, 1.2 ), Vector2( 1, 1 ) ]
}

[node name="MainMenu" type="Node"]
script = ExtResource( 7 )

[node name="Camera2D" parent="." instance=ExtResource( 2 )]
position = Vector2( 288, 448 )
process_mode = 1
drag_margin_h_enabled = false
drag_margin_v_enabled = false
smoothing_enabled = false

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="Camera2D"]
remote_path = NodePath("../BackgroundViewport/Viewport/CameraMover")
update_rotation = false
update_scale = false

[node name="BackgroundViewport" type="ViewportContainer" parent="Camera2D"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -288.0
margin_top = -448.0
margin_right = 288.0
margin_bottom = 576.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="Camera2D/BackgroundViewport"]
size = Vector2( 576, 1024 )
handle_input_locally = false
usage = 0
render_target_update_mode = 3
gui_disable_input = true

[node name="BackGroundLoader" parent="Camera2D/BackgroundViewport/Viewport" instance=ExtResource( 1 )]
position = Vector2( -82, -256 )
scale = Vector2( 1.3, 1.3 )
_unload_panels = false

[node name="CameraMover" type="Position2D" parent="Camera2D/BackgroundViewport/Viewport"]
position = Vector2( 288, 448 )
__meta__ = {
"_editor_description_": ""
}

[node name="RandomMover" parent="Camera2D/BackgroundViewport/Viewport/CameraMover" instance=ExtResource( 3 )]
_max_dist = 32

[node name="BackgroundCamera" type="Camera2D" parent="Camera2D/BackgroundViewport/Viewport/CameraMover/RandomMover"]
position = Vector2( 0, -3.05176e-05 )
offset = Vector2( 0, 64 )
current = true

[node name="CameraTween" type="Tween" parent="."]
playback_process_mode = 0

[node name="Menu" type="Node" parent="."]

[node name="TitlePosition" type="Position2D" parent="Menu"]
position = Vector2( 90, 130 )

[node name="Mover" parent="Menu/TitlePosition" instance=ExtResource( 3 )]
_max_dist = 10
_travel_time = 4.0
_time_variation = 1.0

[node name="TextureRect" type="TextureRect" parent="Menu/TitlePosition/Mover"]
margin_left = -88.0
margin_right = 488.0
margin_bottom = 118.0
rect_pivot_offset = Vector2( 278.495, 57.1617 )
texture = ExtResource( 4 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayPosition" type="Position2D" parent="Menu"]
position = Vector2( 258, 530 )

[node name="Mover" parent="Menu/PlayPosition" instance=ExtResource( 3 )]
_max_dist = 10
_travel_time = 4.0
_time_variation = 1.0

[node name="PlayButton" parent="Menu/PlayPosition/Mover" instance=ExtResource( 5 )]
margin_left = -64.0
margin_top = -64.0
margin_right = 128.0
margin_bottom = 128.0
rect_pivot_offset = Vector2( 96.5761, 100.577 )
texture_normal = ExtResource( 6 )

[node name="OptionsPosition" type="Position2D" parent="Menu"]
position = Vector2( 82, 690 )

[node name="Mover" parent="Menu/OptionsPosition" instance=ExtResource( 3 )]
_max_dist = 6
_travel_time = 3.0
_time_variation = 0.5

[node name="OptionsButton" parent="Menu/OptionsPosition/Mover" instance=ExtResource( 5 )]
margin_right = 104.0
margin_bottom = 104.0
rect_pivot_offset = Vector2( 50.4116, 51.3906 )
texture_normal = ExtResource( 8 )

[node name="ScorePosition" type="Position2D" parent="Menu"]
position = Vector2( 236, 722 )

[node name="Mover" parent="Menu/ScorePosition" instance=ExtResource( 3 )]
_max_dist = 6
_travel_time = 3.0
_time_variation = 0.5

[node name="ScoreButton" parent="Menu/ScorePosition/Mover" instance=ExtResource( 5 )]
margin_right = 104.0
margin_bottom = 104.0
rect_pivot_offset = Vector2( 53.3869, 52.6884 )

[node name="ShopPosition" type="Position2D" parent="Menu"]
position = Vector2( 386, 690 )

[node name="Mover" parent="Menu/ShopPosition" instance=ExtResource( 3 )]
_max_dist = 6
_travel_time = 3.0
_time_variation = 0.5

[node name="ShopButton" parent="Menu/ShopPosition/Mover" instance=ExtResource( 5 )]
margin_right = 104.0
margin_bottom = 104.0
rect_pivot_offset = Vector2( 50.8486, 53.769 )
texture_normal = ExtResource( 9 )

[node name="SubMenus" type="Node" parent="."]

[node name="OptionsMenu" parent="SubMenus" instance=ExtResource( 12 )]
position = Vector2( 0, -1088 )

[node name="ScoreMenu" parent="SubMenus" instance=ExtResource( 11 )]
position = Vector2( 0, -1088 )

[node name="ShopMenu" parent="SubMenus" instance=ExtResource( 10 )]
position = Vector2( 0, -1088 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/menu_appear = SubResource( 1 )

[connection signal="pressed" from="Menu/PlayPosition/Mover/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="Menu/OptionsPosition/Mover/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="Menu/ScorePosition/Mover/ScoreButton" to="." method="_on_ScoreButton_pressed"]
[connection signal="pressed" from="Menu/ShopPosition/Mover/ShopButton" to="." method="_on_ShopButton_pressed"]
